@@ -1,3 +1,7 @@
+Sat Mar 24 15:29:51 CET 2012  Jeffrey Lee  <me@phlamethrower.co.uk>
+
+	* main.c (main): Support comma separated include directories.
+
 Sat Mar 24 15:24:05 CET 2012  John Tytgat  <John.Tytgat@aaug.net>
 
 	* directive_storagemap.c (c_record): Make use of Value_* routines.
